--- a/alunos/index.html
+++ b/alunos/index.html
@@ -11,7 +11,7 @@
     <!-- ======= CABEÇALHO ======= -->
     <header id="header">
         <div class="header-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
@@ -34,7 +34,7 @@
 
         <!-- Tabs internas (Ver / Registar) -->
         <nav class="subtabs">
-            <a href="" class="subtab-link active">Ver Alunos</a>
+            <a href="index.html" class="subtab-link active">Ver Alunos</a>
             <a href="registarAluno.html" class="subtab-link">Registar novo aluno</a>
         </nav>
 
