--- a/turma.html
+++ b/turma.html
@@ -14,19 +14,19 @@
   <header id="header">
     <div class="header-logo">
       <a href="index.html">
-        <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
+         <img src="img/Logo.png" alt="Gestão de Estágios Universitários">
       </a>
     </div>
 
     <nav class="nav-menu">
-      <a href="alunos/index.html" class="nav-link">Alunos</a>
-      <a href="#" class="nav-link">Professores</a>
-      <a href="#" class="nav-link">Empresas</a>
+      <a href="index.html" class="nav-link">Alunos</a>
+      <a href="professores/index.html" class="nav-link">Professores</a>
+      <a href="empresas/index.html" class="nav-link">Empresas</a>
       <a href="index.html" class="nav-link active">Turmas</a>
-      <button class="btn-conta" id="btn-conta">
-        <img src="../img/img_conta.png" alt="Conta">
-    </button>
 
+      <button id="btn-conta" class="btn-conta">
+        <img src="img/img_conta.png" alt="Conta">
+      </button>
       <a href="login.html" class="btn-sair">Sair</a>
     </nav>
   </header>
@@ -140,7 +140,7 @@
     </div>
   </footer>
 
-    <!-- ======= POP-UP SALVAR ======= -->
+  <!-- ======= POP-UP SALVAR ======= -->
   <div id="popup-salvar" class="popup-overlay">
     <div class="popup-box">
       <p class="popup-text">Deseja salvar as informações?</p>
@@ -189,10 +189,11 @@
 
   <script src="js/confirmarDados.js"></script>
 </body>
+
 </html>
 
 
-  <script src="js/turma.js"></script>
+<script src="js/turma.js"></script>
 </body>
 
 </html>
