--- a/estagios/escolhaAreaEmpresa.html
+++ b/estagios/escolhaAreaEmpresa.html
@@ -13,20 +13,21 @@
   <!-- Cabeçalho -->
     <header id="header">
         <div class="header-logo">
-            <a href="index.html">
+            <a href="../index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
 
         <nav class="nav-menu">
-            <a href="alunos/index.html" class="nav-link">Alunos</a>
-            <a href="#" class="nav-link">Professores</a>
-            <a href="#" class="nav-link">Empresas</a>
-            <a href="index.html" class="nav-link active">Turmas</a>
-            <button class="btn-conta" id="btn-conta">
+            <a href="../index.html" class="nav-link active">Alunos</a>
+            <a href="../professores/index.html" class="nav-link">Professores</a>
+            <a href="../empresas/index.html" class="nav-link">Empresas</a>
+            <a href="../index.html" class="nav-link">Turmas</a>
+
+            <button class="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
-            <a href="login.html" class="btn-sair">Sair</a>
+            <a href="../login.html" class="btn-sair">Sair</a>
         </nav>
     </header>
 
