--- a/professores/index.html
+++ b/professores/index.html
@@ -10,7 +10,7 @@
 
     <header id="header">
         <div class="header-logo">
-            <a href="../index.html">
+            <a href="index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
@@ -24,7 +24,7 @@
             <button class="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
-            <a href="../login.html" class="btn-sair">Sair</a>
+            <a href="login.html" class="btn-sair">Sair</a>
         </nav>
     </header>
 
