--- a/professores/verProfessor.html
+++ b/professores/verProfessor.html
@@ -11,7 +11,7 @@
     <!-- ======= CABEÇALHO ======= -->
     <header id="header">
         <div class="header-logo">
-            <a href="../index.html">
+            <a href="index.html">
                 <img src="../img/Logo.png" alt="Gestão de Estágios Universitários">
             </a>
         </div>
@@ -25,7 +25,7 @@
             <button class="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
-            <a href="../login.html" class="btn-sair">Sair</a>
+            <a href="login.html" class="btn-sair">Sair</a>
         </nav>
     </header>
 
