--- a/professores/registarProfessor.html
+++ b/professores/registarProfessor.html
@@ -22,7 +22,7 @@
             <a href="../empresas/index.html" class="nav-link">Empresas</a>
             <a href="../index.html" class="nav-link">Turmas</a>
 
-            <button class="btn-conta">
+            <button class="btn-conta" id="btn-conta">
                 <img src="../img/img_conta.png" alt="Conta">
             </button>
             <a href="login.html" class="btn-sair">Sair</a>
@@ -160,6 +160,43 @@
             <img src="../img/img_confinanciado.png" alt="Confinanciado">
         </div>
     </footer>
+
+<!-- ======= MODAL PERFIL / CONTA ======= -->
+    <div id="perfil-overlay" class="perfil-overlay">
+    <div class="perfil-card">
+        <div class="perfil-banner"></div>
+
+        <div class="perfil-avatar">
+            <img src="../img/img_conta.png" alt="Avatar" class="perfil-avatar-img">
+        </div>
+
+        <div class="perfil-content">
+            <div class="perfil-role">Aluno</div>
+            <div class="perfil-name">Rodrigo Branco</div>
+
+            <div class="perfil-row">
+                <img src="../img/img_email.png" alt="Email" class="perfil-row-img">
+                <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+            </div>
+
+            <a href="../verPerfil.html" class="perfil-row">
+                <img src="../img/img_definicoes.png" alt="Definições" class="perfil-row-img">
+                <span class="perfil-row-text">Definições de conta</span>
+            </a>
+
+            <a href="../login.html" class="perfil-logout-row">
+                <img src="../img/img_sair.png" alt="Sair" class="perfil-back-img">
+                <span class="perfil-logout-text">Log out</span>
+            </a>
+
+            <button type="button" class="perfil-voltar-btn">
+                Voltar
+            </button>
+        </div>
+    </div>
+</div>
+
+  <script src="js/registarProfessor.js"></script>
 
 </body>
 </html>
