--- a/turma.html
+++ b/turma.html
@@ -140,60 +140,43 @@
     </div>
   </footer>
 
-  <!-- ======= POP-UP SALVAR ======= -->
-  <div id="popup-salvar" class="popup-overlay">
-    <div class="popup-box">
-      <p class="popup-text">Deseja salvar as informações?</p>
 
-      <div class="popup-actions">
-        <button type="button" class="popup-btn popup-cancel">Cancelar</button>
-        <button type="button" class="popup-btn popup-confirm">Sim</button>
-      </div>
-    </div>
-  </div>
 
-  <!-- ======= MODAL PERFIL / CONTA ======= -->
-  <div id="perfil-overlay" class="perfil-overlay">
+ <!-- ======= MODAL PERFIL / CONTA ======= -->
+    <div id="perfil-overlay" class="perfil-overlay">
     <div class="perfil-card">
-      <div class="perfil-banner"></div>
+        <div class="perfil-banner"></div>
 
-      <div class="perfil-avatar">
-        <span class="perfil-avatar-icon">👤</span>
-      </div>
-
-      <div class="perfil-content">
-        <div class="perfil-role">Aluno</div>
-        <div class="perfil-name">Rodrigo Branco</div>
-
-        <div class="perfil-row">
-          <span class="perfil-row-icon">✉️</span>
-          <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+        <div class="perfil-avatar">
+            <img src="img/img_conta.png" alt="Avatar" class="perfil-avatar-img">
         </div>
 
-        <div class="perfil-row">
-          <span class="perfil-row-icon">⚙️</span>
-          <span class="perfil-row-text">Definições de conta</span>
+        <div class="perfil-content">
+            <div class="perfil-role">Aluno</div>
+            <div class="perfil-name">Rodrigo Branco</div>
+
+            <div class="perfil-row">
+                <img src="img/img_email.png" alt="Email" class="perfil-row-img">
+                <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+            </div>
+
+            <a href="verPerfil.html" class="perfil-row">
+                <img src="img/img_definicoes.png" alt="Definições" class="perfil-row-img">
+                <span class="perfil-row-text">Definições de conta</span>
+            </a>
+
+            <a href="login.html" class="perfil-logout-row">
+                <img src="img/img_sair.png" alt="Sair" class="perfil-back-img">
+                <span class="perfil-logout-text">Log out</span>
+            </a>
+
+            <button type="button" class="perfil-voltar-btn">
+                Voltar
+            </button>
         </div>
-
-        <a href="../login.html" type="button" class="perfil-logout-row">
-          <span class="perfil-back-icon">←</span>
-          <span class="perfil-logout-text">Log out</span>
-        </a>
-
-        <button type="button" class="perfil-voltar-btn">
-          Voltar
-        </button>
-      </div>
     </div>
-  </div>
+</div>
 
-  <script src="js/confirmarDados.js"></script>
+  <script src="js/turma.js"></script>
 </body>
-
-</html>
-
-
-<script src="js/turma.js"></script>
-</body>
-
 </html>
