--- a/verPerfil.html
+++ b/verPerfil.html
@@ -34,102 +34,97 @@
     <!-- ======= CONTEÚDO PRINCIPAL ======= -->
     <main id="main-content">
 
-        <!-- Barra de título + botão voltar -->
-        <div class="perfil-head">
-            <h1 class="perfil-titulo">Definições (Informações pessoais)</h1>
+    <div class="perfil-head">
+        <h1 class="perfil-titulo">Definições (Informações pessoais)</h1>
 
-            <!-- Voltar: podes trocar o href se quiseres ir para outra página -->
-            <a href="javascript:history.back()" class="btn-voltar">
-                Voltar
-            </a>
-        </div>
+        <a href="javascript:history.back()" class="btn-voltar">
+            Voltar
+        </a>
+    </div>
 
-        <!-- Cartão com as informações de conta -->
-        <section class="perfil-card">
-            <ul class="perfil-list">
+    <section class="perfil-card">
+        <ul class="perfil-list">
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">👤</span>
-                        <span class="perfil-label-text">Nome de utilizador</span>
-                    </div>
-                    <span class="perfil-value">Jorge Moreno</span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_conta_def.png" alt="User" class="perfil-icon-img">
+                    <span class="perfil-label-text">Nome de utilizador</span>
+                </div>
+                <span class="perfil-value">Jorge Moreno</span>
+            </li>
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">✉️</span>
-                        <span class="perfil-label-text">Email</span>
-                    </div>
-                    <span class="perfil-value">240001462@esg.ipsantarem.pt</span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_email.png" alt="Email" class="perfil-icon-img">
+                    <span class="perfil-label-text">Email</span>
+                </div>
+                <span class="perfil-value">240001462@esg.ipsantarem.pt</span>
+            </li>
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">🎓</span>
-                        <span class="perfil-label-text">Curso</span>
-                    </div>
-                    <span class="perfil-value">
-                        Tecnologias e Programação de Sistemas de Informação
-                    </span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_curso.png" alt="Curso" class="perfil-icon-img">
+                    <span class="perfil-label-text">Curso</span>
+                </div>
+                <span class="perfil-value">
+                    Tecnologias e Programação de Sistemas de Informação
+                </span>
+            </li>
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">👨‍🏫</span>
-                        <span class="perfil-label-text">Professor orientador</span>
-                    </div>
-                    <span class="perfil-value">Jorge Constantino</span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_professorOrientador.png" alt="Professor" class="perfil-icon-img">
+                    <span class="perfil-label-text">Professor orientador</span>
+                </div>
+                <span class="perfil-value">Jorge Constantino</span>
+            </li>
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">🏫</span>
-                        <span class="perfil-label-text">Escola</span>
-                    </div>
-                    <span class="perfil-value">Instituto Politécnico de Santarém</span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_escola.png" alt="Escola" class="perfil-icon-img">
+                    <span class="perfil-label-text">Escola</span>
+                </div>
+                <span class="perfil-value">Instituto Politécnico de Santarém</span>
+            </li>
 
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">📌</span>
-                        <span class="perfil-label-text">Estado do estágio</span>
-                    </div>
-                    <span class="perfil-value">Aguardar resposta</span>
-                </li>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_estadoEstagio.png" alt="Estado" class="perfil-icon-img">
+                    <span class="perfil-label-text">Estado do estágio</span>
+                </div>
+                <span class="perfil-value">Aguardar resposta</span>
+            </li>
 
-                <!-- GitHub -->
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">🐱</span>
-                        <span class="perfil-label-text">GitHub</span>
-                    </div>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_github.png" alt="GitHub" class="perfil-icon-img">
+                    <span class="perfil-label-text">GitHub</span>
+                </div>
 
-                    <div class="perfil-input-group">
-                        <input type="url" class="perfil-input" placeholder="https://github.com/o-teu-username"
-                            value="https://www.github.com" />
-                        <button id="btn-add-github" class="btn-add">Adicionar</button>
-                    </div>
-                </li>
+                <div class="perfil-input-group">
+                    <input type="url" class="perfil-input" placeholder="https://github.com/o-teu-username"
+                        value="https://www.github.com" />
+                    <button id="btn-add-github" class="btn-add">Adicionar</button>
+                </div>
+            </li>
 
-                <!-- LinkedIn -->
-                <li class="perfil-row">
-                    <div class="perfil-label">
-                        <span class="perfil-icon">🔗</span>
-                        <span class="perfil-label-text">LinkedIn</span>
-                    </div>
+            <li class="perfil-row">
+                <div class="perfil-label">
+                    <img src="img/img_linkedIn.png" alt="LinkedIn" class="perfil-icon-img">
+                    <span class="perfil-label-text">LinkedIn</span>
+                </div>
 
-                    <div class="perfil-input-group">
-                        <input type="url" class="perfil-input" placeholder="https://linkedin.com/in/o-teu-perfil"
-                            value="https://www.linkedin.com" />
-                        <button id="btn-add-linkedin" class="btn-add">Adicionar</button>
-                    </div>
-                </li>
+                <div class="perfil-input-group">
+                    <input type="url" class="perfil-input" placeholder="https://linkedin.com/in/o-teu-perfil"
+                        value="https://www.linkedin.com" />
+                    <button id="btn-add-linkedin" class="btn-add">Adicionar</button>
+                </div>
+            </li>
 
-            </ul>
-        </section>
+        </ul>
+    </section>
 
-    </main>
+</main>
 
     <!-- ======= RODAPÉ ======= -->
     <footer id="footer">
