--- a/alunos/index.html
+++ b/alunos/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GEU — Ver Alunos</title>
     <link rel="stylesheet" href="css/index.css" />
 </head>
+
 <body>
 
     <!-- ======= CABEÇALHO ======= -->
@@ -38,21 +40,16 @@
             <a href="registarAluno.html" class="subtab-link">Registar novo aluno</a>
         </nav>
 
-        <!-- Barra de pesquisa -->
-        <section class="search-section">
-            <div class="search-box">
+        <!-- Tabela de alunos -->
+        <section class="search-area">
+            <div class="search-wrapper">
                 <span class="search-icon">🔍</span>
-                <input
-                    type="text"
-                    placeholder="Procurar por aluno"
-                    aria-label="Procurar por aluno"
-                >
+                <input type="text" placeholder="Procurar por aluno" aria-label="Procurar por aluno">
             </div>
         </section>
 
-        <!-- Tabela de alunos -->
-        <section class="table-wrapper">
-            <table class="alunos-table">
+        <section class="tabela-alunos">
+            <table>
                 <thead>
                     <tr>
                         <th>Número de aluno</th>
@@ -63,7 +60,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr onclick="window.location='verAluno.html'" class="linha-click">
+                    <tr onclick="window.location='verAluno.html'">
                         <td>240001087</td>
                         <td>Rodrigo Da Silva Branco</td>
                         <td>Técnico Superior de Programação de Sistemas de Informação</td>
@@ -114,42 +111,43 @@
         </div>
     </footer>
 
-<!-- ======= MODAL PERFIL / CONTA ======= -->
+    <!-- ======= MODAL PERFIL / CONTA ======= -->
     <div id="perfil-overlay" class="perfil-overlay">
-    <div class="perfil-card">
-        <div class="perfil-banner"></div>
+        <div class="perfil-card">
+            <div class="perfil-banner"></div>
 
-        <div class="perfil-avatar">
-            <img src="../img/img_conta.png" alt="Avatar" class="perfil-avatar-img">
-        </div>
-
-        <div class="perfil-content">
-            <div class="perfil-role">Aluno</div>
-            <div class="perfil-name">Rodrigo Branco</div>
-
-            <div class="perfil-row">
-                <img src="../img/img_email.png" alt="Email" class="perfil-row-img">
-                <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+            <div class="perfil-avatar">
+                <img src="../img/img_conta.png" alt="Avatar" class="perfil-avatar-img">
             </div>
 
-            <a href="verPerfil.html" class="perfil-row">
-                <img src="../img/img_definicoes.png" alt="Definições" class="perfil-row-img">
-                <span class="perfil-row-text">Definições de conta</span>
-            </a>
+            <div class="perfil-content">
+                <div class="perfil-role">Aluno</div>
+                <div class="perfil-name">Rodrigo Branco</div>
 
-            <a href="login.html" class="perfil-logout-row">
-                <img src="../img/img_sair.png" alt="Sair" class="perfil-back-img">
-                <span class="perfil-logout-text">Log out</span>
-            </a>
+                <div class="perfil-row">
+                    <img src="../img/img_email.png" alt="Email" class="perfil-row-img">
+                    <span class="perfil-row-text">240001087@esg.ipsantarem.pt</span>
+                </div>
 
-            <button type="button" class="perfil-voltar-btn">
-                Voltar
-            </button>
+                <a href="verPerfil.html" class="perfil-row">
+                    <img src="../img/img_definicoes.png" alt="Definições" class="perfil-row-img">
+                    <span class="perfil-row-text">Definições de conta</span>
+                </a>
+
+                <a href="login.html" class="perfil-logout-row">
+                    <img src="../img/img_sair.png" alt="Sair" class="perfil-back-img">
+                    <span class="perfil-logout-text">Log out</span>
+                </a>
+
+                <button type="button" class="perfil-voltar-btn">
+                    Voltar
+                </button>
+            </div>
         </div>
     </div>
-</div>
 
-  <script src="js/index.js"></script>
+    <script src="js/index.js"></script>
 
 </body>
+
 </html>
